--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "dist/@aribaui/resources/themes/ariba/theme.scss",
               "dist/@aribaui/resources/styles/aribaui.scss",
               "modules/playground/src/styles.scss"
+
             ],
             "scripts": [
               "node_modules/prismjs/prism.js",
@@ -309,7 +310,8 @@
               "node_modules/primeicons/primeicons.css",
               "dist/@aribaui/resources/themes/ariba/theme.scss",
               "dist/@aribaui/resources/styles/aribaui.scss",
-              "modules/metaui-evolution/src/styles.css"
+              "modules/metaui-evolution/src/styles.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": [
               "node_modules/prismjs/prism.js",
