--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "6.0.7",
-    "@angular/core": "6.0.7",
-    "@angular/compiler": "6.0.7",
     "@angular/animations": "6.0.7",
+    "@angular/cdk": "6.4.7",
+    "@angular/common": "6.0.7",
+    "@angular/compiler": "6.0.7",
+    "@angular/core": "6.0.7",
     "@angular/forms": "6.0.7",
     "@angular/http": "6.0.7",
+    "@angular/material": "6.4.7",
     "@angular/platform-browser": "6.0.7",
     "@angular/platform-browser-dynamic": "6.0.7",
     "@angular/router": "6.0.7",
@@ -55,6 +57,7 @@
     "quill": "1.3.6",
     "rxjs": "6.2.1",
     "typescript-collections": "1.3.2",
+    "watch": "^1.0.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "0.8.26"
   },
