--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,6 @@
               "dist/@aribaui/resources/themes/ariba/theme.scss",
               "dist/@aribaui/resources/styles/aribaui.scss",
               "modules/playground/src/styles.scss"
-
             ],
             "scripts": [
               "node_modules/prismjs/prism.js",
@@ -310,8 +309,7 @@
               "node_modules/primeicons/primeicons.css",
               "dist/@aribaui/resources/themes/ariba/theme.scss",
               "dist/@aribaui/resources/styles/aribaui.scss",
-              "modules/metaui-evolution/src/styles.css",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "modules/metaui-evolution/src/styles.css"
             ],
             "scripts": [
               "node_modules/prismjs/prism.js",
